log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 05:59:32 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:15: error: invalid type argument of unary ‘*’ (have ‘int’)
   17 |   lista->data=*array[0];
      |               ^~~~~~~~~
Compilation failed
70205da
Thu 30 Mar 2023 05:59:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:14: error: assignment to ‘void **’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   17 |   lista->data=array[0];
      |              ^
arraylist.c:17:20: error: ‘*array’ is used uninitialized [-Werror=uninitialized]
   17 |   lista->data=array[0];
      |               ~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e10a2b1
Thu 30 Mar 2023 06:01:10 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
b6fefed
Thu 30 Mar 2023 06:07:28 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c155366
Thu 30 Mar 2023 06:08:04 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:15: error: incompatible types when assigning to type ‘void **’ from type ‘ArrayList’ {aka ‘struct ArrayList’}
   16 |   lista->data=*lista;
      |               ^
Compilation failed
84494d0
Thu 30 Mar 2023 06:08:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d3a158f
Thu 30 Mar 2023 06:09:14 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
977b055
Thu 30 Mar 2023 06:09:33 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
0ea860c
Thu 30 Mar 2023 06:11:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ef9b50
